--- a/Analysis.ipynb
+++ b/Analysis.ipynb
@@ -70,19 +70,19 @@
    "id": "039833fd",
    "metadata": {},
    "source": [
-    "agency_id                                       :Unique identifier for the agency\n",
-    "toptier_code\t                                :Code for top-level federal agency classification\n",
-    "abbreviation\t                                :Acronym of the agency name\n",
-    "agency_name\t                                    :Full name of the federal agency\n",
-    "congressional_justification_url\t                :Link to agency’s budget request document submitted to Congress\n",
-    "active_fy\t                                    :Current fiscal year(financial year) for which data is reported\n",
-    "active_fq\t                                    :Current fiscal quarter\n",
-    "outlay_amount\t                                :Actual amount spent by the agency\n",
-    "obligated_amount                                :Funds committed by the agency but not yet spent\n",
-    "budget_authority_amount                         :Authorized budget for the agency\n",
-    "current_total_budget_authority_amount           :Total budget authority including all adjustments\n",
-    "percentage_of_total_budget_authority            :Agency’s share of the total government budget\n",
-    "agency_slug\t                                    :URL-friendly version of the agency name used in web links"
+    "    - agency_id                                       :Unique identifier for the agency\n",
+    "    - toptier_code\t                                :Code for top-level federal agency classification\n",
+    "    - abbreviation\t                                :Acronym of the agency name\n",
+    "    - agency_name\t                                    :Full name of the federal agency\n",
+    "    - congressional_justification_url\t                :Link to agency’s budget request document submitted to Congress\n",
+    "    - active_fy\t                                    :Current fiscal year(financial year) for which data is reported\n",
+    "    - active_fq\t                                    :Current fiscal quarter\n",
+    "    - outlay_amount\t                                :Actual amount spent by the agency\n",
+    "    - obligated_amount                                :Funds committed by the agency but not yet spent\n",
+    "    - budget_authority_amount                         :Authorized budget for the agency\n",
+    "    - current_total_budget_authority_amount           :Total budget authority including all adjustments\n",
+    "    - percentage_of_total_budget_authority            :Agency’s share of the total government budget\n",
+    "   -  agency_slug\t                                    :URL-friendly version of the agency name used in web links"
    ]
   },
   {
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": null,
    "id": "f0f2d748",
    "metadata": {},
    "outputs": [
@@ -1628,7 +1628,7 @@
    "id": "541547b0",
    "metadata": {},
    "source": [
-    "### ***Insights***:-\n",
+    "### **Insights**:-\n",
     "**\"Most Spent on an Agency\"**:\n",
     "\n",
     "1. **HHS (Health and Human Services)**  \n",
@@ -2678,7 +2678,7 @@
    "id": "77e07e5f",
    "metadata": {},
    "source": [
-    "### ***Insights***:-\n",
+    "### **Insights**:-\n",
     "**\"Most Obligated money on an Agency\"**:\n",
     "\n",
     "1. **HHS (Health and Human Services)**  \n",
@@ -4625,56 +4625,12 @@
    "id": "568084b6",
    "metadata": {},
    "source": [
-    "\n",
-    "\n",
-    "### 🔍 **Key Definitions**\n",
+    "### **Key Definitions**\n",
     "- **Outlay**: Actual spending during the fiscal year.\n",
     "- **Obligated**: Funds committed to be spent.\n",
     "- **Authorized**: Maximum amount approved by legislation.\n",
     "\n",
-    "---\n",
-    "\n",
-    "### 🏆 **Top Agencies by Financial Scale**\n",
-    "\n",
-    "#### 1. **TREAS (Department of the Treasury)**\n",
-    "- **Outlay**: ~\\$2T  \n",
-    "- **Obligated**: ~\\$2.5T  \n",
-    "- **Authorized**: ~\\$4.5T  \n",
-    "- **Insight**: Largest financial footprint, likely due to debt servicing, tax refunds, and financial programs.\n",
-    "\n",
-    "#### 2. **HHS (Health and Human Services)**\n",
-    "- **Outlay**: ~\\$1T  \n",
-    "- **Obligated**: ~\\$1.5T  \n",
-    "- **Authorized**: ~\\$2.5T  \n",
-    "- **Insight**: Major healthcare programs drive high spending and commitments.\n",
-    "\n",
-    "#### 3. **SSA (Social Security Administration)**\n",
-    "- **Outlay**: ~\\$1T  \n",
-    "- **Obligated**: ~\\$1.25T  \n",
-    "- **Authorized**: ~\\$1.75T  \n",
-    "- **Insight**: Reflects consistent funding for Social Security benefits.\n",
-    "\n",
-    "#### 4. **DOD (Department of Defense)**\n",
-    "- **Outlay**: <\\$0.5T  \n",
-    "- **Obligated**: <\\$0.75T  \n",
-    "- **Authorized**: >\\$2.25T  \n",
-    "- **Insight**: High authorization suggests readiness for large-scale operations, though actual spending is lower.\n",
-    "\n",
-    "---\n",
-    "\n",
-    "### 📉 **Lower Spending Agencies**\n",
-    "All below ~\\$0.25T in all categories:\n",
-    "- **VA (Veterans Affairs)**\n",
-    "- **USDA (Agriculture)**\n",
-    "- **OPM (Personnel Management)**\n",
-    "- **DHS (Homeland Security)**\n",
-    "- **DOT (Transportation)**\n",
-    "- **HUD (Housing and Urban Development)**\n",
-    "- **DOE (Energy)** – notably the lowest, <\\$0.05T\n",
-    "\n",
-    "---\n",
-    "\n",
-    "### 📊 **Insights & Observations**\n",
+    "###  **Insights & Observations**\n",
     "- **TREAS and HHS** dominate in all three financial categories.\n",
     "- **DOD** has a large gap between authorized and actual outlay, indicating strategic flexibility.\n",
     "- **SSA** maintains a balanced and predictable financial profile.\n",
@@ -5668,12 +5624,60 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ae9427b0",
+   "cell_type": "markdown",
+   "id": "8129c698",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### **Insights**\n",
+    "\n",
+    "- The top four agencies (TREAS, HHS, DOD, SSA) together account for nearly 80% of the total budget.\n",
+    "- Agencies with social, economic, and defense responsibilities dominate the budget distribution.\n",
+    "- Smaller agencies still play crucial roles but operate with leaner budgets.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9c20dd16",
+   "metadata": {},
+   "source": [
+    "## Final Insghts\n",
+    "\n",
+    "\n",
+    "### **1. Budget Dominance by Key Agencies**\n",
+    "- **TREAS (Department of the Treasury)** consistently leads in all metrics:\n",
+    "  - With 31.6% budget share, TREAS has a authorized amount of $4.25 trillion\n",
+    "  - This is the case as, TREAS plays a central role in managing federal finances, debt, and tax-related expenditures.\n",
+    "\n",
+    "- **HHS (Health and Human Services)**:\n",
+    "  - With the **Second highest budget share** of 22.3, HHS outperforms even TREAS in outlay ajnd obligated amounts, making it the highest in the present financial year. \n",
+    "  - This shows major fundings by US Government for healthcare programs like Medicare and Medicaid.\n",
+    "\n",
+    "- **DOD (Department of Defense)**:\n",
+    "  - With a percentage share of 16.8%, DOD has a high authorization but lies low in actual outlay\n",
+    "  - This shows \"Strategic Flexibility\" with large authorized funds, but controlled spending.\n",
+    "\n",
+    "- **SSA (Social Security Administration)**:\n",
+    "  - With a stable budget share of 9.02%, SSA has a Balanced outlay and obligation of ~\\$1T and ~\\$1.25T.\n",
+    "  - This shows the predictable funding for Social Security benefits.\n",
+    "\n",
+    "\n",
+    "###  **2. Smaller Agencies with Lean Budgets**\n",
+    "- Agencies like DOE, FDIC, DOC, DOI, HUD, DOT, DHS, OPM, USDA, VA have:\n",
+    "  - Budget shares below 5% (combined)\n",
+    "  - Outlays and obligations below \\$0.25T\n",
+    "  - These agencies serve specialized roles and operate with modest funding as their role is very \"niche\" as compared to the bigs 4's.\n",
+    "\n",
+    "\n",
+    "###  **3. Spending vs. Authorization Gaps**\n",
+    "- **DOD** and **HHS** show significant gaps between authorized and actual outlay, indicating:\n",
+    "  - Strategic reserves or flexibility\n",
+    "  - Potential for emergency or discretionary spending\n",
+    "\n",
+    "\n",
+    "### **4. Overall Budget Distribution**\n",
+    "- The top four agencies (TREAS, HHS, DOD, SSA) account for **~80%** of the total budget.\n",
+    "- Remaining agencies share the remaining **~20%**, highlighting a highly concentrated budget structure."
+   ]
   }
  ],
  "metadata": {
